Fixed the horizontal cards not fliping vertically on mobile view.

--- a/src/components/projectCardHorizontal/projectCardHorizontal.module.css
+++ b/src/components/projectCardHorizontal/projectCardHorizontal.module.css
@@ -120,12 +120,12 @@
 
 @media only screen and (max-width: 1000px) {
   .container,
-  .imageLink img {
-    min-height: max-content;
-  }
   .flip {
     max-width: 45rem;
     flex-direction: column;
+  }
+  .imageLink img {
+    min-height: fit-content;
   }
   .container img {
     object-fit: contain;
